// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`SplitPage renders correctly with renderContent 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-1",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-2",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "extraData": undefined,
                  },
                  "type": "FlatList",
                },
              ],
              "props": {
                "style": {
                  "display": "flex",
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "flexShrink": 0,
                  "maxWidth": 300,
                  "width": 300,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": undefined,
                    "testID": "content-undefined",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "style": {
                  "display": "flex",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "padding": 8,
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "backgroundColor": "#D9D9D9",
              "display": "flex",
              "flex": undefined,
              "flexDirection": "row",
              "height": "100%",
              "padding": 8,
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "display": "flex",
          "flex": 1,
        },
      },
      "type": "SafeAreaView",
    },
  ],
  "props": {
    "behavior": "padding",
    "keyboardVerticalOffset": undefined,
    "style": {
      "display": "flex",
      "flex": 1,
    },
  },
  "type": "KeyboardAvoidingView",
}
`;

exports[`SplitPage renders correctly with children 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-1",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-2",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "extraData": undefined,
                  },
                  "type": "FlatList",
                },
              ],
              "props": {
                "style": {
                  "display": "flex",
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "flexShrink": 0,
                  "maxWidth": 300,
                  "width": 300,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "style": undefined,
                        "testID": "child-1",
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "contentContainerStyle": {
                      "flex": 1,
                    },
                    "style": {
                      "borderRadius": 4,
                      "flex": 1,
                      "height": "100%",
                      "overflow": "hidden",
                      "width": "60%",
                    },
                  },
                  "type": "ScrollView",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "style": undefined,
                        "testID": "child-2",
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "contentContainerStyle": {
                      "flex": 1,
                    },
                    "style": {
                      "borderRadius": 4,
                      "flex": 1,
                      "height": "100%",
                      "overflow": "hidden",
                      "width": "60%",
                    },
                  },
                  "type": "ScrollView",
                },
              ],
              "props": {
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "style": {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "center",
                  "paddingLeft": 8,
                  "paddingRight": 8,
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "backgroundColor": "#D9D9D9",
              "display": "flex",
              "flex": undefined,
              "flexDirection": "row",
              "height": "100%",
              "padding": 8,
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "display": "flex",
          "flex": 1,
        },
      },
      "type": "SafeAreaView",
    },
  ],
  "props": {
    "behavior": "padding",
    "keyboardVerticalOffset": undefined,
    "style": {
      "display": "flex",
      "flex": 1,
    },
  },
  "type": "KeyboardAvoidingView",
}
`;

exports[`SplitPage renders with loading state 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-1",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-2",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "extraData": undefined,
                  },
                  "type": "FlatList",
                },
              ],
              "props": {
                "style": {
                  "display": "flex",
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "flexShrink": 0,
                  "maxWidth": 300,
                  "width": 300,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": undefined,
                    "testID": "content-undefined",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "style": {
                  "display": "flex",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "padding": 8,
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "backgroundColor": "#D9D9D9",
              "display": "flex",
              "flex": undefined,
              "flexDirection": "row",
              "height": "100%",
              "padding": 8,
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "display": "flex",
          "flex": 1,
        },
      },
      "type": "SafeAreaView",
    },
  ],
  "props": {
    "behavior": "padding",
    "keyboardVerticalOffset": undefined,
    "style": {
      "display": "flex",
      "flex": 1,
    },
  },
  "type": "KeyboardAvoidingView",
}
`;

exports[`SplitPage renders with custom color 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-1",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-2",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "extraData": undefined,
                  },
                  "type": "FlatList",
                },
              ],
              "props": {
                "style": {
                  "display": "flex",
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "flexShrink": 0,
                  "maxWidth": 300,
                  "width": 300,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": undefined,
                    "testID": "content-undefined",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "style": {
                  "display": "flex",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "padding": 8,
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "backgroundColor": "#0E9DCD",
              "display": "flex",
              "flex": undefined,
              "flexDirection": "row",
              "height": "100%",
              "padding": 8,
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "display": "flex",
          "flex": 1,
        },
      },
      "type": "SafeAreaView",
    },
  ],
  "props": {
    "behavior": "padding",
    "keyboardVerticalOffset": undefined,
    "style": {
      "display": "flex",
      "flex": 1,
    },
  },
  "type": "KeyboardAvoidingView",
}
`;

exports[`SplitPage renders with tabs when more than 2 children 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-1",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-2",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "extraData": undefined,
                  },
                  "type": "FlatList",
                },
              ],
              "props": {
                "style": {
                  "display": "flex",
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "flexShrink": 0,
                  "maxWidth": 300,
                  "width": 300,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": [
                            {
                              "$$typeof": Symbol(react.test.json),
                              "children": [
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        "Tab 1",
                                      ],
                                      "props": {
                                        "numberOfLines": 0,
                                        "style": {
                                          "color": "#1C1C1C",
                                          "fontFamily": "heading-semibold",
                                          "fontSize": 14,
                                        },
                                        "testID": undefined,
                                      },
                                      "type": "Text",
                                    },
                                  ],
                                  "props": {
                                    "aria-role": "button",
                                    "onPress": [Function],
                                    "style": {
                                      "alignItems": "center",
                                      "backgroundColor": "#FFFFFF",
                                      "borderRadius": 360,
                                      "display": "flex",
                                      "flexBasis": 0,
                                      "flexDirection": "row",
                                      "flexGrow": 1,
                                      "gap": 8,
                                      "height": "100%",
                                      "justifyContent": "center",
                                      "overflow": "hidden",
                                      "paddingHorizontal": 2,
                                    },
                                  },
                                  "type": "Pressable",
                                },
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        "Tab 2",
                                      ],
                                      "props": {
                                        "numberOfLines": 0,
                                        "style": {
                                          "color": "#1C1C1C",
                                          "fontFamily": "heading-semibold",
                                          "fontSize": 14,
                                        },
                                        "testID": undefined,
                                      },
                                      "type": "Text",
                                    },
                                  ],
                                  "props": {
                                    "aria-role": "button",
                                    "onPress": [Function],
                                    "style": {
                                      "alignItems": "center",
                                      "backgroundColor": undefined,
                                      "borderRadius": 360,
                                      "display": "flex",
                                      "flexBasis": 0,
                                      "flexDirection": "row",
                                      "flexGrow": 1,
                                      "gap": 8,
                                      "height": "100%",
                                      "justifyContent": "center",
                                      "overflow": "hidden",
                                      "paddingHorizontal": 2,
                                    },
                                  },
                                  "type": "Pressable",
                                },
                                {
                                  "$$typeof": Symbol(react.test.json),
                                  "children": [
                                    {
                                      "$$typeof": Symbol(react.test.json),
                                      "children": [
                                        "Tab 3",
                                      ],
                                      "props": {
                                        "numberOfLines": 0,
                                        "style": {
                                          "color": "#1C1C1C",
                                          "fontFamily": "heading-semibold",
                                          "fontSize": 14,
                                        },
                                        "testID": undefined,
                                      },
                                      "type": "Text",
                                    },
                                  ],
                                  "props": {
                                    "aria-role": "button",
                                    "onPress": [Function],
                                    "style": {
                                      "alignItems": "center",
                                      "backgroundColor": undefined,
                                      "borderRadius": 360,
                                      "display": "flex",
                                      "flexBasis": 0,
                                      "flexDirection": "row",
                                      "flexGrow": 1,
                                      "gap": 8,
                                      "height": "100%",
                                      "justifyContent": "center",
                                      "overflow": "hidden",
                                      "paddingHorizontal": 2,
                                    },
                                  },
                                  "type": "Pressable",
                                },
                              ],
                              "props": {
                                "style": {
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "flexGrow": 1,
                                  "gap": 4,
                                  "height": 32,
                                  "paddingHorizontal": 4,
                                },
                                "testID": undefined,
                              },
                              "type": "View",
                            },
                          ],
                          "props": {
                            "style": {
                              "alignItems": "center",
                              "backgroundColor": "#CDCDCD",
                              "borderRadius": 360,
                              "display": "flex",
                              "flexDirection": "row",
                              "flexGrow": 1,
                              "flexShrink": 1,
                              "height": 36,
                              "maxHeight": 36,
                              "overflow": "hidden",
                            },
                            "testID": undefined,
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "style": {
                          "alignItems": "center",
                          "display": "flex",
                          "flexDirection": "row",
                          "gap": 8,
                        },
                        "testID": undefined,
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "onPointerEnter": [Function: AsyncFunction],
                    "onPointerLeave": [Function: AsyncFunction],
                    "style": {
                      "marginBottom": 16,
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "width": "100%",
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "child-1",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "contentContainerStyle": {
                          "flex": 1,
                        },
                        "style": {
                          "borderRadius": 4,
                          "flex": 1,
                          "height": "100%",
                          "overflow": "hidden",
                          "paddingLeft": 0,
                          "paddingRight": 16,
                          "width": "60%",
                        },
                      },
                      "type": "ScrollView",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "child-2",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "contentContainerStyle": {
                          "flex": 1,
                        },
                        "style": {
                          "borderRadius": 4,
                          "flex": 1,
                          "height": "100%",
                          "overflow": "hidden",
                          "paddingLeft": 16,
                          "paddingRight": 0,
                          "width": "60%",
                        },
                      },
                      "type": "ScrollView",
                    },
                  ],
                  "props": {
                    "onPointerEnter": [Function: AsyncFunction],
                    "onPointerLeave": [Function: AsyncFunction],
                    "style": {
                      "display": "flex",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "flexShrink": 1,
                      "height": "100%",
                      "paddingLeft": 16,
                      "paddingRight": 16,
                      "width": "100%",
                    },
                    "testID": undefined,
                  },
                  "type": "View",
                },
              ],
              "props": {
                "style": {
                  "alignItems": "center",
                  "flex": 1,
                  "height": "100%",
                  "width": "100%",
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "backgroundColor": "#D9D9D9",
              "display": "flex",
              "flex": undefined,
              "flexDirection": "row",
              "height": "100%",
              "padding": 8,
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "display": "flex",
          "flex": 1,
        },
      },
      "type": "SafeAreaView",
    },
  ],
  "props": {
    "behavior": "padding",
    "keyboardVerticalOffset": undefined,
    "style": {
      "display": "flex",
      "flex": 1,
    },
  },
  "type": "KeyboardAvoidingView",
}
`;

exports[`SplitPage renders with list view header 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": undefined,
                    "testID": "list-header",
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-1",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-2",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "extraData": undefined,
                  },
                  "type": "FlatList",
                },
              ],
              "props": {
                "style": {
                  "display": "flex",
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "flexShrink": 0,
                  "maxWidth": 300,
                  "width": 300,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": undefined,
                    "testID": "content-undefined",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "style": {
                  "display": "flex",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "padding": 8,
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "backgroundColor": "#D9D9D9",
              "display": "flex",
              "flex": undefined,
              "flexDirection": "row",
              "height": "100%",
              "padding": 8,
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "display": "flex",
          "flex": 1,
        },
      },
      "type": "SafeAreaView",
    },
  ],
  "props": {
    "behavior": "padding",
    "keyboardVerticalOffset": undefined,
    "style": {
      "display": "flex",
      "flex": 1,
    },
  },
  "type": "KeyboardAvoidingView",
}
`;

exports[`SplitPage renders with custom list view width and max width 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-1",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-2",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "extraData": undefined,
                  },
                  "type": "FlatList",
                },
              ],
              "props": {
                "style": {
                  "display": "flex",
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "flexShrink": 0,
                  "maxWidth": 500,
                  "width": 400,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": undefined,
                    "testID": "content-undefined",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "style": {
                  "display": "flex",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "padding": 8,
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "backgroundColor": "#D9D9D9",
              "display": "flex",
              "flex": undefined,
              "flexDirection": "row",
              "height": "100%",
              "padding": 8,
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "display": "flex",
          "flex": 1,
        },
      },
      "type": "SafeAreaView",
    },
  ],
  "props": {
    "behavior": "padding",
    "keyboardVerticalOffset": undefined,
    "style": {
      "display": "flex",
      "flex": 1,
    },
  },
  "type": "KeyboardAvoidingView",
}
`;

exports[`SplitPage renders with listViewExtraData 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-1",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-2",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "extraData": {
                      "counter": 1,
                    },
                  },
                  "type": "FlatList",
                },
              ],
              "props": {
                "style": {
                  "display": "flex",
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "flexShrink": 0,
                  "maxWidth": 300,
                  "width": 300,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": undefined,
                    "testID": "content-undefined",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "style": {
                  "display": "flex",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "padding": 8,
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "backgroundColor": "#D9D9D9",
              "display": "flex",
              "flex": undefined,
              "flexDirection": "row",
              "height": "100%",
              "padding": 8,
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "display": "flex",
          "flex": 1,
        },
      },
      "type": "SafeAreaView",
    },
  ],
  "props": {
    "behavior": "padding",
    "keyboardVerticalOffset": undefined,
    "style": {
      "display": "flex",
      "flex": 1,
    },
  },
  "type": "KeyboardAvoidingView",
}
`;

exports[`SplitPage renders with keyboard offset 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-1",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-2",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "extraData": undefined,
                  },
                  "type": "FlatList",
                },
              ],
              "props": {
                "style": {
                  "display": "flex",
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "flexShrink": 0,
                  "maxWidth": 300,
                  "width": 300,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": undefined,
                    "testID": "content-undefined",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "style": {
                  "display": "flex",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "padding": 8,
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "backgroundColor": "#D9D9D9",
              "display": "flex",
              "flex": undefined,
              "flexDirection": "row",
              "height": "100%",
              "padding": 8,
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "display": "flex",
          "flex": 1,
        },
      },
      "type": "SafeAreaView",
    },
  ],
  "props": {
    "behavior": "padding",
    "keyboardVerticalOffset": 100,
    "style": {
      "display": "flex",
      "flex": 1,
    },
  },
  "type": "KeyboardAvoidingView",
}
`;

exports[`SplitPage filters out null children 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-1",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-2",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "extraData": undefined,
                  },
                  "type": "FlatList",
                },
              ],
              "props": {
                "style": {
                  "display": "flex",
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "flexShrink": 0,
                  "maxWidth": 300,
                  "width": 300,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "style": undefined,
                        "testID": "child-1",
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "contentContainerStyle": {
                      "flex": 1,
                    },
                    "style": {
                      "borderRadius": 4,
                      "flex": 1,
                      "height": "100%",
                      "overflow": "hidden",
                      "width": "60%",
                    },
                  },
                  "type": "ScrollView",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "style": undefined,
                        "testID": "child-2",
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "contentContainerStyle": {
                      "flex": 1,
                    },
                    "style": {
                      "borderRadius": 4,
                      "flex": 1,
                      "height": "100%",
                      "overflow": "hidden",
                      "width": "60%",
                    },
                  },
                  "type": "ScrollView",
                },
              ],
              "props": {
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "style": {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "center",
                  "paddingLeft": 8,
                  "paddingRight": 8,
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "backgroundColor": "#D9D9D9",
              "display": "flex",
              "flex": undefined,
              "flexDirection": "row",
              "height": "100%",
              "padding": 8,
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "display": "flex",
          "flex": 1,
        },
      },
      "type": "SafeAreaView",
    },
  ],
  "props": {
    "behavior": "padding",
    "keyboardVerticalOffset": undefined,
    "style": {
      "display": "flex",
      "flex": 1,
    },
  },
  "type": "KeyboardAvoidingView",
}
`;

exports[`SplitPage renders with showItemList true to reset selection 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-1",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-2",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "extraData": undefined,
                  },
                  "type": "FlatList",
                },
              ],
              "props": {
                "style": {
                  "display": "flex",
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "flexShrink": 0,
                  "maxWidth": 300,
                  "width": 300,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "style": undefined,
                    "testID": "content-undefined",
                  },
                  "type": "View",
                },
              ],
              "props": {
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "style": {
                  "display": "flex",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "padding": 8,
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "backgroundColor": "#D9D9D9",
              "display": "flex",
              "flex": undefined,
              "flexDirection": "row",
              "height": "100%",
              "padding": 8,
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "display": "flex",
          "flex": 1,
        },
      },
      "type": "SafeAreaView",
    },
  ],
  "props": {
    "behavior": "padding",
    "keyboardVerticalOffset": undefined,
    "style": {
      "display": "flex",
      "flex": 1,
    },
  },
  "type": "KeyboardAvoidingView",
}
`;

exports[`SplitPage renders with bottomNavBarHeight 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-1",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        {
                          "$$typeof": Symbol(react.test.json),
                          "children": null,
                          "props": {
                            "style": undefined,
                            "testID": "item-2",
                          },
                          "type": "View",
                        },
                      ],
                      "props": {
                        "accessibilityHint": "",
                        "aria-label": "Select",
                        "aria-role": "button",
                        "onLayout": undefined,
                        "onPointerEnter": [Function: AsyncFunction],
                        "onPointerLeave": [Function: AsyncFunction],
                        "onPress": [Function: AsyncFunction],
                        "style": {},
                        "testID": undefined,
                      },
                      "type": "Pressable",
                    },
                  ],
                  "props": {
                    "extraData": undefined,
                  },
                  "type": "FlatList",
                },
              ],
              "props": {
                "style": {
                  "display": "flex",
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "flexShrink": 0,
                  "maxWidth": 300,
                  "width": 300,
                },
                "testID": undefined,
              },
              "type": "View",
            },
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": null,
                      "props": {
                        "style": undefined,
                        "testID": "child-1",
                      },
                      "type": "View",
                    },
                  ],
                  "props": {
                    "contentContainerStyle": {
                      "flex": 1,
                    },
                    "style": {
                      "borderRadius": 4,
                      "flex": 1,
                      "height": "100%",
                      "overflow": "hidden",
                      "width": "60%",
                    },
                  },
                  "type": "ScrollView",
                },
              ],
              "props": {
                "onPointerEnter": [Function: AsyncFunction],
                "onPointerLeave": [Function: AsyncFunction],
                "style": {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "center",
                  "paddingLeft": 8,
                  "paddingRight": 8,
                },
                "testID": undefined,
              },
              "type": "View",
            },
          ],
          "props": {
            "onPointerEnter": [Function: AsyncFunction],
            "onPointerLeave": [Function: AsyncFunction],
            "style": {
              "backgroundColor": "#D9D9D9",
              "display": "flex",
              "flex": undefined,
              "flexDirection": "row",
              "height": "100%",
              "padding": 8,
              "width": "100%",
            },
            "testID": undefined,
          },
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "display": "flex",
          "flex": 1,
        },
      },
      "type": "SafeAreaView",
    },
  ],
  "props": {
    "behavior": "padding",
    "keyboardVerticalOffset": undefined,
    "style": {
      "display": "flex",
      "flex": 1,
    },
  },
  "type": "KeyboardAvoidingView",
}
`;
